# diun-dash

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml
.github/actions/run-tests/: action.yml
.github/workflows/: auto-version.yml  docker-publish.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 1773e6072a71_add_image_name_image_tag_and_digest_to_.py  7311ecad9a85_create_diun_updates_table.py
data/: diun.db
scripts/: dev.sh  migrate.sh  send-test-notification.sh  test.sh
src/: alembic.ini  database.py  main.py  models.py
src/alembic/: env.py
src/alembic/versions/: a1b2c3d4e5f6_add_unique_constraint_hostname_image_name.py  b2c3d4e5f6a7_change_image_created_at_to_datetime.py  c3d4e5f6a7b8_fix_corrupted_image_created_at.py  f62e201ae66b_add_image_created_at_field_to_diun_.py
static/: dashboard.js
templates/: index.html
tests/: conftest.py  test_auth.py  test_dashboard.py  test_database.py  test_models.py  test_multi_server.py  test_parsing.py  test_webhook_workflow.py
