[project]
name = "diun-dash"
version = "0.1.0"
description = "A simple FastAPI web application."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "jinja2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]


