[project]
name = "diun-dash"
version = "0.1.0"
description = "A simple FastAPI web application."
authors = [
    { name = "Nace Oroz", email = "nace@oroz.si" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "jinja2",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
